--- a/FP3C6 - 04 Back-end/01backend/package.json
+++ b/FP3C6 - 04 Back-end/01backend/package.json
@@ -10,7 +10,9 @@
   "author": "Danilo D. Quirino",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
