Sala de Aula - 2309.19 -- Primeira migration

--- a/FP3C6 - 04 Back-end/01backend/ormconfig.json
+++ b/FP3C6 - 04 Back-end/01backend/ormconfig.json
@@ -6,5 +6,9 @@
   "password": "ifsp",
   "database": "db_aula",
   "synchronize": false,
-  "logging": false
+  "logging": false,
+  "migrations": ["./src/database/migrations/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
