--- a/FP3C6 - 04 Back-end/01backend/package.json
+++ b/FP3C6 - 04 Back-end/01backend/package.json
@@ -12,8 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mysql2": "^2.3.3",
-    "typeorm": "^0.2.38"
+    "mysql": "^2.18.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
