--- a/FP3C6 - 04 Back-end/01backend/package.json
+++ b/FP3C6 - 04 Back-end/01backend/package.json
@@ -12,11 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
