--- a/FP3C6 - 00 Atividades Avaliativas/02AtividadePratica/package.json
+++ b/FP3C6 - 00 Atividades Avaliativas/02AtividadePratica/package.json
@@ -1,6 +1,6 @@
 {
   "name": "02atividadepratica",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,12 +11,17 @@
   "author": "Danilo D. Quirino",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
