--- a/FP3C6 - 00 Atividades Avaliativas/02AtividadePratica/package.json
+++ b/FP3C6 - 00 Atividades Avaliativas/02AtividadePratica/package.json
@@ -17,11 +17,13 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/yup": "^0.32.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
